# MonetDB_WCOJ

./: README.md
MonetDB/: debug_levels  start_triangleDB.sh
MonetDB/monetdb5/mal/: mal_listing.c  mal_listing.h
MonetDB/monetdb5/optimizer/: opt_emptybind.c  opt_support.c
MonetDB/sql/backends/monet5/: CMakeLists.txt  rel_bin.c  rel_bin_wcoj.c  rel_bin_wcoj.h  sql_execute.c  sql_gencode.c  sql_gencode.h  (+5 more)
MonetDB/sql/common/: sql_list.c
MonetDB/sql/include/: sql_list.h
benchmark/: README.md  benchmark.sh  benchmark_fanout.sh  benchmark_fanout_v2.sh  benchmark_mal.sh  draw_fanout_plots.py  draw_plots.py  draw_plots_cp.py  dropAll.sql  go3.sql  go3_wcoj_mal  go4.sql  go4_wcoj_mal  go6.sql  pyproject.toml
benchmark/correctness/: go3_verification.txt  go4_verification.txt  go6_verification.txt
benchmark/gendb/: R.csv  S.csv  T.csv  main.py
benchmark/results/: monetdb_classic_2.csv
benchmark/results/fanout/m_10000/: monetdb_classic.csv  monetdb_wcoj_optimized.csv
benchmark/results/fanout/m_30000/: monetdb_classic.csv  monetdb_wcoj_optimized.csv
benchmark/results/fanout_v2/: monetdb_classic.csv  monetdb_wcoj._optimizedlog  monetdb_wcoj_optimized.csv
benchmark/results/wcoj_crossproduct/: MonetDB_classic.csv  MonetDB_classic_v1.csv  MonetDB_wcoj.csv  MonetDB_wcoj_v1.csv
benchmark/results/wcoj_no_crossproduct/: monetdb_classic.csv  monetdb_wcoj_optimized.csv
benchmark/results/wcoj_no_crossproduct_n3/: monetdb_classic_log.csv  monetdb_classic_orig.csv  monetdb_wcoj_optimized.csv  monetdb_wcoj_optimized_log.csv  monetdb_wcoj_optimized_orig.csv
(+2 files in other folders)
