[tool.poetry]
name = "genDB"
version = "0.1.0"
description = ""
authors = ["Matthias Lanzinger <matthias.lanzinger@cs.ox.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
